# Cricket_Simulator

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  config.json  config_manager.py  database.py  league_simulator.py  main.py  match_simulator.py  pyproject.toml  requirements.txt  setup.py  teams.py  teams_helper.py  top_players.py
database/: top_players_summary.json
fixtures/: __init__.py  double_round_robin_playoff.py  wc26_format.py
tools/: annotate_match_results.py
